force-app/main/default/objects/QuoteLineItem/fields/Aduanas__c.field-meta.xml
<CustomField>
    <fullName>Aduanas__c</fullName>
    <label>Impuesto aduanero</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>