force-app/main/default/objects/QuoteLineItem/fields/Especificaci_n_1__c.field-meta.xml
<CustomField>
    <fullName>Especificaci_n_1__c</fullName>
    <label>Especificación 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>