force-app/main/default/objects/QuoteLineItem/fields/Exento__c.field-meta.xml
<CustomField>
    <fullName>Exento__c</fullName>
    <defaultValue>false</defaultValue>
    <label>El cliente paga IVA?</label>
    <type>Checkbox</type>
</CustomField>