force-app/main/default/objects/QuoteLineItem/fields/Exonera_IVA__c.field-meta.xml
<CustomField>
    <fullName>Exonera_IVA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exonera IVA</label>
    <type>Checkbox</type>
</CustomField>