force-app/main/default/objects/QuoteLineItem/fields/Id_Opp__c.field-meta.xml
<CustomField>
    <fullName>Id_Opp__c</fullName>
    <formula>Quote.Opportunity.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id Opp</label>
    <type>Text</type>
</CustomField>