force-app/main/default/objects/QuoteLineItem/fields/IVA__c.field-meta.xml
<CustomField>
    <fullName>IVA__c</fullName>
    <label>IVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>