force-app/main/default/objects/QuoteLineItem/fields/Precio_de_lista_sin_IVA__c.field-meta.xml
<CustomField>
    <fullName>Precio_de_lista_sin_IVA__c</fullName>
    <formula>PricebookEntry.UnitPrice / 1.15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio de lista sin IVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>