force-app/main/default/objects/QuoteLineItem/fields/Precio_de_lista_unitario__c.field-meta.xml
<CustomField>
    <fullName>Precio_de_lista_unitario__c</fullName>
    <label>Precio de lista unitario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>