force-app/main/default/objects/QuoteLineItem/fields/Precio_final__c.field-meta.xml
<CustomField>
    <fullName>Precio_final__c</fullName>
    <formula>Subtotal__c -  Aduanas__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Precio especial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>