force-app/main/default/objects/QuoteLineItem/fields/Rebaja__c.field-meta.xml
<CustomField>
    <fullName>Rebaja__c</fullName>
    <formula>ABS(Quantity * (PricebookEntry.UnitPrice/1.15 - UnitPrice/1.15))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descuento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>