force-app/main/default/objects/QuoteLineItem/fields/Rebaja_Especial__c.field-meta.xml
<CustomField>
    <fullName>Rebaja_Especial__c</fullName>
    <label>Rebaja Especial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>