force-app/main/default/objects/QuoteLineItem/fields/Total_Impuesto__c.field-meta.xml
<CustomField>
    <fullName>Total_Impuesto__c</fullName>
    <label>Total Impuesto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>