force-app/main/default/objects/QuoteLineItem/fields/Total_precio_especial__c.field-meta.xml
<CustomField>
    <fullName>Total_precio_especial__c</fullName>
    <label>Total precio especial</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>