force-app/main/default/objects/QuoteLineItem/fields/Valor_IVA__c.field-meta.xml
<CustomField>
    <fullName>Valor_IVA__c</fullName>
    <formula>IF( Exento__c , UnitPrice - UnitPrice / 1.15, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IVA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>