force-app/main/default/objects/QuoteLineItem/fields/X15_I_V_A__c.field-meta.xml
<CustomField>
    <fullName>X15_I_V_A__c</fullName>
    <defaultValue>false</defaultValue>
    <label>15% I.V.A</label>
    <type>Checkbox</type>
</CustomField>